--- a/Projects/Game2/Game2.vcxproj.filters
+++ b/Projects/Game2/Game2.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClCompile Include="..\..\Source\Game2\LeafManager.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\Source\Game2\Fuel.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\Source\Game2\Car.h">
@@ -36,6 +39,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="..\..\Source\Game2\LeafManager.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\Source\Game2\Fuel.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
