--- a/Projects/GameEngine/GameEngine.vcxproj
+++ b/Projects/GameEngine/GameEngine.vcxproj
@@ -135,6 +135,7 @@
     <ClCompile Include="..\..\Source\GameEngine\PhysicsManager.cpp" />
     <ClCompile Include="..\..\Source\GameEngine\PoolManager.cpp" />
     <ClCompile Include="..\..\Source\GameEngine\RenderManager.cpp" />
+    <ClCompile Include="..\..\Source\GameEngine\Text.cpp" />
     <ClCompile Include="..\..\Source\GameEngine\Texture.cpp" />
     <ClCompile Include="..\..\Source\GameEngine\TimeManager.cpp" />
     <ClCompile Include="..\..\Source\GameEngine\Transform.cpp" />
@@ -154,6 +155,7 @@
     <ClInclude Include="..\..\Source\GameEngine\PoolManager.h" />
     <ClInclude Include="..\..\Source\GameEngine\RenderManager.h" />
     <ClInclude Include="..\..\Source\GameEngine\Singleton.h" />
+    <ClInclude Include="..\..\Source\GameEngine\Text.h" />
     <ClInclude Include="..\..\Source\GameEngine\Texture.h" />
     <ClInclude Include="..\..\Source\GameEngine\TimeManager.h" />
     <ClInclude Include="..\..\Source\GameEngine\Transform.h" />
