--- a/Projects/GameEngine/GameEngine.vcxproj
+++ b/Projects/GameEngine/GameEngine.vcxproj
@@ -125,6 +125,7 @@
   <ItemGroup>
     <ClCompile Include="..\..\Source\GameEngine\Audio.cpp" />
     <ClCompile Include="..\..\Source\GameEngine\AudioManager.cpp" />
+    <ClCompile Include="..\..\Source\GameEngine\Button.cpp" />
     <ClCompile Include="..\..\Source\GameEngine\Collider.cpp" />
     <ClCompile Include="..\..\Source\GameEngine\GameObject.cpp" />
     <ClCompile Include="..\..\Source\GameEngine\GameObjectManager.cpp" />
@@ -133,7 +134,6 @@
     <ClCompile Include="..\..\Source\GameEngine\Manager.cpp" />
     <ClCompile Include="..\..\Source\GameEngine\ManagerOfManagers.cpp" />
     <ClCompile Include="..\..\Source\GameEngine\PhysicsManager.cpp" />
-    <ClCompile Include="..\..\Source\GameEngine\PoolManager.cpp" />
     <ClCompile Include="..\..\Source\GameEngine\RenderManager.cpp" />
     <ClCompile Include="..\..\Source\GameEngine\Text.cpp" />
     <ClCompile Include="..\..\Source\GameEngine\Texture.cpp" />
@@ -144,6 +144,7 @@
   <ItemGroup>
     <ClInclude Include="..\..\Source\GameEngine\Audio.h" />
     <ClInclude Include="..\..\Source\GameEngine\AudioManager.h" />
+    <ClInclude Include="..\..\Source\GameEngine\Button.h" />
     <ClInclude Include="..\..\Source\GameEngine\Collider.h" />
     <ClInclude Include="..\..\Source\GameEngine\GameObject.h" />
     <ClInclude Include="..\..\Source\GameEngine\GameObjectManager.h" />
@@ -152,7 +153,6 @@
     <ClInclude Include="..\..\Source\GameEngine\Manager.h" />
     <ClInclude Include="..\..\Source\GameEngine\ManagerOfManagers.h" />
     <ClInclude Include="..\..\Source\GameEngine\PhysicsManager.h" />
-    <ClInclude Include="..\..\Source\GameEngine\PoolManager.h" />
     <ClInclude Include="..\..\Source\GameEngine\RenderManager.h" />
     <ClInclude Include="..\..\Source\GameEngine\Singleton.h" />
     <ClInclude Include="..\..\Source\GameEngine\Text.h" />
