--- a/Projects/GameEngine/GameEngine.vcxproj
+++ b/Projects/GameEngine/GameEngine.vcxproj
@@ -140,6 +140,9 @@
     <ClCompile Include="..\..\Source\GameEngine\TimeManager.cpp" />
     <ClCompile Include="..\..\Source\GameEngine\Transform.cpp" />
     <ClCompile Include="..\..\Source\GameEngine\Vector2.cpp" />
+    <ClCompile Include="Entity.cpp" />
+    <ClCompile Include="Scene.cpp" />
+    <ClCompile Include="SceneManager.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\Source\GameEngine\Audio.h" />
@@ -160,6 +163,9 @@
     <ClInclude Include="..\..\Source\GameEngine\TimeManager.h" />
     <ClInclude Include="..\..\Source\GameEngine\Transform.h" />
     <ClInclude Include="..\..\Source\GameEngine\Vector2.h" />
+    <ClInclude Include="Entity.h" />
+    <ClInclude Include="Scene.h" />
+    <ClInclude Include="SceneManager.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
