--- a/Projects/Game2/Game2.vcxproj
+++ b/Projects/Game2/Game2.vcxproj
@@ -23,7 +23,7 @@
     <ClCompile Include="..\..\Source\Game2\Fuel.cpp" />
     <ClCompile Include="..\..\Source\Game2\Leaf.cpp" />
     <ClCompile Include="..\..\Source\Game2\LeafManager.cpp" />
-    <ClCompile Include="..\..\Source\Game2\main.cpp" />
+    <ClCompile Include="..\..\Source\Game2\Game2.h" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\Source\Game2\Car.h" />
@@ -44,7 +44,7 @@
     <CharacterSet>MultiByte</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'" Label="Configuration">
-    <ConfigurationType>Application</ConfigurationType>
+    <ConfigurationType>StaticLibrary</ConfigurationType>
     <UseDebugLibraries>false</UseDebugLibraries>
     <PlatformToolset>v142</PlatformToolset>
     <WholeProgramOptimization>true</WholeProgramOptimization>
